Users now have unique colors

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -60,6 +60,19 @@ body {
   flex: 2;
   font-weight: 700;
 }
+    .one {
+        color: #731284;
+      }
+    .two {
+      color: #0f4f1d;
+    }
+    .three {
+      color: #7f3b00;
+    }
+    .four {
+      color: #09238c;
+    }
+
 
 .navbar {
   background: tomato;
